--- a/KendoUI-Overview/styles/main.css
+++ b/KendoUI-Overview/styles/main.css
@@ -1,26 +1,74 @@
-﻿body
-{
-    font: Arial, sans-serif;
+#overview-contacts h2,
+#overview-cities h2 {
+    display: inline-block;
+    font-size: 1.1em;
+    margin: 1em 0 .5em 1em;
 }
-
-.buttonArea,
-.footerText,
-#geoLocationContainer,
-#helloWorldInput,
-#helloWorldText
-{
-    text-align: center;
+#overview-account h2 {
+    display: inline-block;
+    font-size: 1.1em;
+    margin: 1.5em 0 0 1em;
 }
+#overview-account h2 span {
+    display: block;
+    clear: both;
+    font-size: 2em;
+    margin: .2em 0 0 0;
+}
+#overview-contacts img,
+#overview-cities img,
+#overview-account img {
+	float: left;
+    width: 4em;
+    height: 4em;
+    margin: 0;
+    -webkit-box-shadow: 0 1px 3px #333;
+    box-shadow: 0 1px 3px #333;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+}
+#overview-account img {
+    width: 5em;
+    height: 5em;
+    margin: 1em;
+}
+#overview-account .value {
+	float: right;
+	color: #ccc;
+}
+#settings-view {
+	margin: 1em auto .4em auto;
+}
+#overview-gallery .photo {
+    width: 277px;
+    margin: 20px 20px 7px;
+    height: 220px;
+    display: inline-block;
+    -webkit-background-size: auto 100%;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    -webkit-transform: translatez(0);
+}
+.photo1 {background-image: url("../styles/images/sydney.jpg");}
+.photo2 {background-image: url("../styles/images/bonn.jpg");}
+.photo3 {background-image: url("../styles/images/boston.jpg");}
+.photo4 {background-image: url("../styles/images/cairo.jpg");}
+.photo5 {background-image: url("../styles/images/cancun.jpg");}
+.photo6 {background-image: url("../styles/images/cape-town.jpg");}
+.photo7 {background-image: url("../styles/images/liverpool.jpg");}
+.photo8 {background-image: url("../styles/images/london.jpg");}
+.photo9 {background-image: url("../styles/images/melbourne.jpg");}
+.photo10 {background-image: url("../styles/images/san-francisco.jpg");}
 
-#txtName
-{
-    border: 1px solid #AAA;
-    border-radius: 15px;
-    position:static;
-    margin-left: 1em;
-    margin-top: 0.3em;
-    margin-bottom: 0.3em;
-    background:white;
-    color: black;
-    padding: 7px;
+#scrollview-container {
+    margin: 3px 0 1em 0;
+    padding-bottom: 10px;
+    background: rgba(0,0,0,.1);
+    border: 1px solid rgba(0,0,0,.3);
+    border-width: 1px 0;
+    box-shadow: 0 1px 1px rgba(255,255,255,.3);
+}
+#overview-gallery .km-ios .km-content {
+    background: #bbb;
 }
